为OneBlock位置查询添加缓存机制，优化性能并修复相关问题
主要变更：
1. 在WorldUtils中引入CachedOneBlocks缓存类，缓存岛屿的OneBlock位置数据，减少重复计算
2. 添加缓存失效方法，在岛屿数据变更时及时清除缓存
3. 重构lookupOneBlock方法，使用缓存数据提高查询效率
4. 修改BlocksListener，添加调试日志记录非OneBlock破坏事件
5. 优化PhasesHandler，支持同步多个冷却位置的状态
6. 改进NextPhaseTimer，跟踪多个位置并支持自定义完成回调
7. 增强OneBlockAPI，添加API调用调试日志
8. 在数据存储更新时自动清除相关缓存